--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -113,6 +113,7 @@
             style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="@{viewModel.validPasswordFormat == true}"
             android:onClick="@{() -> viewModel.signUp()}"
             android:text="@string/complete"
             android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
