--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -12,6 +12,8 @@
 
         <import type="com.hyeeyoung.wishboard.R" />
 
+        <import type="android.view.View" />
+
         <import type="androidx.navigation.Navigation" />
     </data>
 
@@ -60,13 +62,6 @@
                 tools:text="1/2 단계" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
         <ImageView
             android:id="@+id/email_icon"
             android:layout_width="wrap_content"
@@ -92,29 +87,45 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/email_icon" />
 
-        <EditText
-            android:id="@+id/email_input"
-            style="@style/Widget.EditText.Basic"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacingBase"
-            android:hint="@string/email_input_text"
-            android:inputType="textEmailAddress"
-            android:onTextChanged="@{viewModel::onRegistrationEmailTextChanged}"
-            android:text="@{viewModel.registrationEmail}"
-            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
-            app:layout_constraintBottom_toTopOf="@id/next" />
+            android:layout_marginTop="32dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/password_detail">
 
-        <Button
-            android:id="@+id/next"
-            style="@style/Widget.Button.Activate.Green"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="@{viewModel.validEmailFormat == true}"
-            android:text="@string/next"
-            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
-            app:layout_constraintBottom_toTopOf="@id/guide_center"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/email_input"
+                style="@style/Widget.EditText.Basic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_input_text"
+                android:inputType="textEmailAddress"
+                android:onTextChanged="@{viewModel::onRegistrationEmailTextChanged}"
+                android:text="@{viewModel.registrationEmail}"
+                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacingBase"
+                android:layout_marginTop="@dimen/spacing5"
+                android:text="@{viewModel.validEmailFormat == false ? context.getString(R.string.sign_email_format_detail_text) : (viewModel.isUnregisteredUser() != null &amp;&amp; viewModel.isUnregisteredUser() == false) ? context.getString(R.string.sign_up_email_registered_user_detail_text) : ``}"
+                android:textAppearance="@style/Widget.TextAppearance.Detail"
+                android:visibility="@{viewModel.registrationEmail.length() > 0 &amp;&amp; (viewModel.validEmailFormat == false || (viewModel.isUnregisteredUser() != null &amp;&amp; viewModel.isUnregisteredUser() == false)) ? View.VISIBLE : View.GONE}"
+                tools:text="@string/sign_up_email_registered_user_detail_text" />
+
+            <Button
+                android:id="@+id/next"
+                style="@style/Widget.Button.Activate.Green"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacingBase"
+                android:onClick="@{() -> viewModel.checkRegisteredUser()}"
+                android:enabled="@{viewModel.validEmailFormat == true}"
+                android:text="@string/next"
+                android:textAppearance="@style/Widget.Button.Basic.TextAppearance" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
