[feat] 회원가입 시 패스워드 포맷 일치하지 않는 경우, detail 메세지 보여주기 구현

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -62,13 +62,6 @@
                 tools:text="2/2 단계" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
         <ImageView
             android:id="@+id/password_icon"
             android:layout_width="wrap_content"
@@ -94,31 +87,45 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password_icon" />
 
-        <EditText
-            android:id="@+id/password_input"
-            style="@style/Widget.EditText.Basic"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacingBase"
-            android:hint="@string/password_input_text"
-            android:inputType="textPassword"
-            android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
-            android:paddingVertical="@dimen/spacing12"
-            android:text="@{viewModel.registrationPassword}"
-            android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
-            app:layout_constraintBottom_toTopOf="@id/next" />
+            android:layout_marginTop="32dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/password_detail">
 
-        <Button
-            android:id="@+id/next"
-            style="@style/Widget.Button.Activate.Green"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="@{viewModel.validPasswordFormat == true}"
-            android:onClick="@{() -> viewModel.signUp()}"
-            android:text="@string/complete"
-            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
-            app:layout_constraintBottom_toTopOf="@id/guide_center"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/password_input"
+                style="@style/Widget.EditText.Basic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password_input_text"
+                android:inputType="textPassword"
+                android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
+                android:paddingVertical="@dimen/spacing12"
+                android:text="@{viewModel.registrationPassword}"
+                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacingBase"
+                android:layout_marginTop="@dimen/spacing5"
+                android:text="@string/sign_password_detail_text"
+                android:textAppearance="@style/Widget.TextAppearance.Detail"
+                android:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false ? View.VISIBLE : View.GONE}"
+                tools:text="@string/sign_password_detail_text" />
+
+            <Button
+                android:id="@+id/next"
+                style="@style/Widget.Button.Activate.Green"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacingBase"
+                android:enabled="@{viewModel.validPasswordFormat == true}"
+                android:onClick="@{() -> viewModel.signUp()}"
+                android:text="@string/sign_up_complete"
+                android:textAppearance="@style/Widget.Button.Basic.TextAppearance" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
