[mod] detail 텍스트 컬러 red -> pink 수정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,7 +148,7 @@
     </style>
 
     <style name="Widget.TextAppearance.Detail" parent="">
-        <item name="android:textColor">@color/green_700</item>
+        <item name="android:textColor">@color/pink</item>
         <item name="android:textSize">@dimen/typographyDescription</item>
         <item name="fontFamily">@font/suit_r</item>
         <item name="android:layout_marginTop">@dimen/spacing5</item>
