--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -104,7 +104,10 @@
                 android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
                 android:paddingVertical="@dimen/spacing12"
                 android:text="@{viewModel.registrationPassword}"
-                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance" />
+                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance">
+
+                <requestFocus />
+            </EditText>
 
             <TextView
                 android:layout_width="wrap_content"
