[chore] margin 수정

--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -62,8 +62,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="36dp"
+                android:layout_marginTop="@dimen/spacingBase"
+                android:layout_marginBottom="@dimen/spacingBase"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:visibility="@{viewModel.isCompletedSendMail() == true ? View.GONE : View.VISIBLE}"
