--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -116,19 +116,20 @@
                 android:layout_marginTop="@dimen/spacing5"
                 android:text="@string/sign_password_detail_text"
                 android:textAppearance="@style/Widget.TextAppearance.Detail"
-                android:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false ? View.VISIBLE : View.GONE}"
-                tools:text="@string/sign_password_detail_text" />
+                android:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false ? View.VISIBLE : View.GONE}" />
 
-            <Button
-                android:id="@+id/next"
-                style="@style/Widget.Button.Activate.Green"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacingBase"
-                android:enabled="@{viewModel.validPasswordFormat == true}"
-                android:onClick="@{() -> viewModel.signUp()}"
-                android:text="@string/sign_up_complete"
-                android:textAppearance="@style/Widget.Button.Basic.TextAppearance" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/next"
+            style="@style/Widget.Button.Activate.Green"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacingBase"
+            android:enabled="@{viewModel.validPasswordFormat == true}"
+            android:onClick="@{() -> viewModel.signUp()}"
+            android:text="@string/sign_up_complete"
+            android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
