--- a/app/src/main/res/drawable/background_dialog.xml
+++ b/app/src/main/res/drawable/background_dialog.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+        android:bottomLeftRadius="@dimen/spacingBase"
+        android:bottomRightRadius="@dimen/spacingBase"
+        android:topLeftRadius="@dimen/spacingBase"
+        android:topRightRadius="@dimen/spacingBase" />
     <solid android:color="@color/white" />
 </shape>
